[package]
name = "goflow_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [ "runtime-async-std", "postgres","chrono","ipnetwork","json" ] }
tokio = { version = "1.27.0", features = ["macros"] }
